add delete and README
